--- a/style1.css
+++ b/style1.css
@@ -341,53 +341,6 @@ header .follow a:hover{
     color: rgb(137, 61, 145);
     background: black;
 }
-/* .Education.box-container{  
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    align-items: center;
-}
-.Education .box-container .box{
-    position: relative;
-    flex: 1 1 33rem;
-    border-left: .2rem solid var(--main-color);
-    padding-left: 3rem;
-    padding-right: 2rem;
-    margin-left: 3rem;
-    
-}
-.Education .box-container .box ::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -1rem;
-    height: 2rem;
-    width: 2rem;
-    border-radius: 50%;
-    background: var(--main-color);
-}
-.Education .box-container .box .content{
-    background: #fff;
-    padding: 1.5rem;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-    border-radius: .5rem;
-}
-.Education .box-container .box  .content  span{
-    color: #fff;
-    font-size: 2rem;
-    background: var(--main-color);
-    border-radius: 50rem;
-    padding: .4rem 1rem ;
-}
-.Education .box-container .box  .content  h3{
-    font-size: 2rem;
-    padding: 8rem 0;
-    color: #111;
-}
-.Education .box-container .box  .content  p{
-    font-size: 2rem;
-    color: #111;
-/* } */
 .Contact .icons-container{
     display: flex;
     gap: 1.5rem;
@@ -493,5 +446,8 @@ header .follow a:hover{
 .education .box-container .box p{
     font-size: 2rem;
 }
-
+.arrow{
+    align-items: center;
+    margin-right: 2.5rem;
+}
 }
