--- a/style1.css
+++ b/style1.css
@@ -122,7 +122,29 @@ header .follow a:hover{
     cursor: pointer;
     display: none;
 }
-
+.rr{
+    font-size: 3.5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #111;
+}
+.rr{
+    color: transparent;
+    -webkit-text-stroke: 3px darkmagenta;
+    position: relative;
+}
+.rr::before{
+    content: "Web Devloper";
+    position: absolute;
+    width: 0;
+    height: 100%;
+    overflow: hidden;
+    border-right: 8px solid darkmagenta;
+    transition: 1s ease-in-out;
+}
+.rr:hover::before{
+    width: 100%;
+    filter: drop-shadow(0 0 25px darkmagenta);
+}
 .home{
     display: flex;
     align-items: center;
